# lean-agent

./: .env.example  .gitignore  README.md  REPORT.md  playground.ipynb  pyproject.toml  run.py
benchmarks/: __init__.py
data/minif2f/: SOURCE.md
docs/: lean-tools.md
experiments/: _smoke_lsp.py  backfill_clean_logs.py  extract_problems.py  notation_pilot.py  run_putnam.py
lean_project/: .gitignore  lake-manifest.json  lakefile.lean
lean_project_core/: .gitignore  Core.lean  lake-manifest.json  lakefile.toml
notebooks/: showcase.ipynb
putnam_problems/: putnam_1962_a5.lean  putnam_1963_a3.lean  putnam_1963_b1.lean  putnam_1963_b2.lean  putnam_1963_b3.lean  putnam_1964_a2.lean  putnam_1964_b4.lean  putnam_1965_a1.lean  putnam_1965_a5.lean  putnam_1967_a3.lean  putnam_1968_a5.lean  putnam_1968_a6.lean  putnam_1968_b1.lean  putnam_1969_a1.lean  putnam_1969_b2.lean  putnam_1969_b4.lean  putnam_1970_a3.lean  putnam_1971_a5.lean  putnam_1971_b2.lean  putnam_1973_a2.lean  putnam_1973_a4.lean  putnam_1974_a1.lean  putnam_1974_a3.lean  putnam_1974_a4.lean  putnam_1974_a6.lean  putnam_1975_a1.lean  putnam_1975_a2.lean  putnam_1975_a4.lean  putnam_1975_b3.lean  putnam_1976_a4.lean  putnam_1976_b1.lean  putnam_1977_a1.lean  putnam_1977_a3.lean  putnam_1977_a4.lean  putnam_1977_a6.lean  putnam_1978_a3.lean  putnam_1978_b5.lean  putnam_1979_a1.lean  putnam_1979_b2.lean  putnam_1979_b3.lean  (+174 more)
scripts/: run.py
tests/: test_benchmarks.py  test_end_to_end.py  test_lean.py  test_lean_tools.py  test_lean_workbook_agent_e2e.py  test_logs.py  test_settings.py  test_tools.py
(+185 files in other folders)
