[project]
name = "lean-agent"
version = "0.1.0"
description = "A lean smolagents-based CodeAgent with principled logging."
readme = "README.md"
authors = [
    { name = "Michael Theologitis", email = "michael.theologitis@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "smolagents[litellm]>=1.25.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
