[project]
name = "lean-agent"
version = "0.1.0"
description = "A common, inspectable baseline theorem-proving agent for Lean 4."
readme = "README.md"
authors = [
    { name = "Michael Theologitis", email = "michael.theologitis@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "smolagents>=1.25.0",
    "openai>=1.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
